Typing anim Setup

--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,15 @@
     <link rel="stylesheet" href="/src/output.css">
     <!-- Self scripts -->
     <script src="../app/DOMMagnament.ts" defer></script>
+    <script src="../build/bundle.js" defer></script>
     <!-- CDNS -->
 
     <title>Creative JS | Home</title>
 </head>
 <body>
+    <h1 class="creative-typing-5">SOY 5</h1>
+    <h1 class="creative-typing-2">NADSNASD 2</h1>
+    <h1 class="creative-typing-9"> ASDNNASD 9</h1>
     
 </body>
 </html>
