--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Styles -->
     <link rel="stylesheet" href="/src/output.css">
+    <link rel="stylesheet" href="keyframes.css">
     <!-- Self scripts -->
     <script src="../app/DOMMagnament.ts" defer></script>
     <script src="../build/bundle.js" defer></script>
