--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <title>Creative JS | Home</title>
 </head>
 <body>
-    <h1 class="creative-typing-5">SOY 5</h1>
+    <h1 class="creative-typing-5 bg-slate-500">SOY 5</h1>
     <h1 class="creative-typing-2">NADSNASD 2</h1>
     <h1 class="creative-typing-9"> ASDNNASD 9</h1>
     
