--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
     <h1 class="creative-typing-5 bg-slate-500">SOY 5</h1>
     <h1 class="creative-typing-2">NADSNASD 2</h1>
     <h1 class="creative-typing-9"> ASDNNASD 9</h1>
+    <span class="typing">HI THERE!</span>
     
 </body>
 </html>
