--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <script src="../build/bundle.js" defer></script>
     <!-- CDNS -->
 
-    <title>Creative JS | Home</title>
+    <title>CreativeUI | Home</title>
 </head>
 <body>
     <h1 class="creative-typing-4 bg-slate-500">SOY 5</h1>
