Remove node_modules from tracking

--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,10 @@
     <title>CreativeUI | Home</title>
 </head>
 <body>
-    <h1 class="creative-typing-4 bg-slate-500">SOY 5</h1>
-    <h1 class="creative-typing-7">NADSNASD 2</h1>
-    <h1 class="creative-typing-5"> ASDNNASD 9</h1>
+
+    <h1 class="ca-typing-4">SOY 5</h1>
+    <h1 class="ca-typing-7">NADSNASD 2</h1>
+    <h1 class="ca-typing-5"> ASDNNASD 9</h1>
     <span class="typing">HI THERE!</span>
     
 </body>
