--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,11 @@
 <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Styles -->
-    <link rel="stylesheet" href="/src/output.css">
     <link rel="stylesheet" href="keyframes.css">
     <!-- Self scripts -->
-    <script src="../build/bundle.js" defer></script>
+    <script src="../build/T1errors.js" defer></script>
+    <script src="../build/T2actions.js" defer></script>
+    <script src="../build/T3DOMMagnament.js" defer></script>
     <!-- CDNS -->
 
     <title>CreativeUI | Home</title>
