--- a/src/index.html
+++ b/src/index.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
 <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Styles -->
     <link rel="stylesheet" href="keyframes.css">
     <!-- Self scripts -->
-    <script src="../build/T1errors.js" defer></script>
-    <script src="../build/T2actions.js" defer></script>
-    <script src="../build/T3DOMMagnament.js" defer></script>
+    <script src="../build/bundle.js" defer></script>
     <!-- CDNS -->
 
     <title>CreativeUI | Home</title>
 </head>
 <body>
-
-    <h1 class="ca-typing-4">SOY 5</h1>
-    <h1 class="ca-typing-7">NADSNASD 2</h1>
-    <h1 class="ca-typing-5"> ASDNNASD 9</h1>
+    <p class="ca-typing-6" style="font-size: 24px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">Soy david mojica un programador experto en c#</p>
+    <h1 class="ca-typing-2">SOY 5</h1>
+    <p class="ca-typing-2.5">Lorem ipsum dolor sit amet</p>
+    <h1 class="ca-typing-2"> ASDNNASD 9</h1>
     <span class="typing">HI THERE!</span>
     
 </body>
