Neon Button & Errors related created

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,6 @@
     <p class="ca-typing-2.5">Lorem ipsum dolor sit amet</p>
     <h1 class="ca-typing-2"> ASDNNASD 9</h1>
     <span class="typing">HI THERE!</span>
-    
+    <button class="cb-neon-d" type="button">NEON</button>
 </body>
 </html>
