Beat animation made with his exceptions

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,10 @@
     <h1 class="ca-typing-2">SOY 5</h1>
     <p class="ca-typing-2.5">Lorem ipsum dolor sit amet</p>
     <h1 class="ca-typing-2"> ASDNNASD 9</h1>
-    <span class="typing">HI THERE!</span>
-    <button class="cb-neon-d" type="button">NEON</button>
+    <span class="ca-beat-5">HI THERE!</span>
+
+    <div class="ca-beat-1">❤️</div>
+
+    <button class="cb-neon-d ca-beat-2" type="button">NEON</button>
 </body>
 </html>
